--- a/front/main/main.html
+++ b/front/main/main.html
@@ -263,7 +263,7 @@
 
         <div class="footer-right">
           <h3>Связаться с нами</h3>
-          <a href="https://t.me/your_bot_username" target="_blank" rel="noopener" class="tg-link" aria-label="Telegram бот">
+          <a href="https://t.me/vslnvksjfbot" target="_blank" rel="noopener" class="tg-link" aria-label="Telegram бот">
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="#54A9EB" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M21.5 2.5L2.5 10.5l5.5 2.5 1.5 6 3.5-4 5 4 3-15z"/>
             </svg>
@@ -280,28 +280,3 @@
 </body>
 </html>
 
-
-asgiref==3.8.1
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-cryptography==44.0.2
-defusedxml==0.7.1
-Django==5.1.7
-django-filter==25.1
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
-djoser==2.3.1
-idna==3.10
-oauthlib==3.2.2
-pycparser==2.22
-PyJWT==2.9.0
-python3-openid==3.2.0
-requests==2.32.3
-requests-oauthlib==2.0.0
-social-auth-app-django==5.4.3
-social-auth-core==4.5.6
-sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
