--- a/front/main/main.html
+++ b/front/main/main.html
@@ -89,7 +89,7 @@
         <form id="mine_bot_form_2" autocomplete="off">
           <h2>Готовые боты (ниже есть ссылки на них, перейдя вы можете ознакомиться с функционалом)</h2>
           <div class="mine_bot">
-            <div class="tg_bot_card">
+            <div class="tg_bot_card" id="products">
               <h3 class="bot_name">Telegram Бот "Помощник"</h3>
               <p class="bot_description">Автоматизируйте поддержку клиентов и увеличьте продажи с нашим готовым ботом.</p>
               <div class="bot_footer">
@@ -277,31 +277,9 @@
 
 </footer>
 <script src="../main/script.js"></script>
+<script src="../catalog/commit_bots_on_site.js"></script>
 </body>
 </html>
 
 
-asgiref==3.8.1
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-cryptography==44.0.2
-defusedxml==0.7.1
-Django==5.1.7
-django-filter==25.1
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
-djoser==2.3.1
-idna==3.10
-oauthlib==3.2.2
-pycparser==2.22
-PyJWT==2.9.0
-python3-openid==3.2.0
-requests==2.32.3
-requests-oauthlib==2.0.0
-social-auth-app-django==5.4.3
-social-auth-core==4.5.6
-sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
+
